tests/NormalTests/paczka1/fuzzy1/71013093.err
Error in line 10: E1U S967 21,5
Error in line 17: 9bqx S733 63,1
